[workspace]
members = ["crates/lib"]
resolver = "3"

[workspace.package]
name = "hibiscus-commit"
version = "0.1.0"
authors = [
    "Pierre Fouilloux",
    "Hibiscus Collective <collective@hibiscusgames.com>",
]
edition = "2024"
rust-version = "1.85"
description = "A context-aware conventional-commit compliant CLI tool to speed up your workflow"
documentation = "https://github.com/HibiscusCollective/conventional-commit-cli"
readme = "README.md"
homepage = "https://github.com/HibiscusCollective/conventional-commit-cli"
repository = "https://github.com/HibiscusCollective/conventional-commit-cli"
license = "AGPL-3.0-or-later"
categories = ["development-tools", "command-line-utilities", "filesystem"]
keywords = ["conventional-commit", "commit", "git", "tools", "cli"]
exclude = ["target/", "*.log", "*.tmp"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]
publish = true

[workspace.lints.clippy]
style = "deny"
complexity = "deny"
perf = "deny"
pedantic = "warn"

[workspace.dependencies]
lib = { path = "crates/lib" }
