[package]
name = "hibiscus-commit-cli"
description.workspace = true
categories.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
exclude.workspace = true
include.workspace = true
publish.workspace = true

[dependencies]
libhibiscuscc = { workspace = true }
