[package]
name = "libhibiscus-commit"
description.workspace = true
categories.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
exclude.workspace = true
include.workspace = true
publish.workspace = true

[dependencies]
derive_builder = "0.20.2"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
rstest = "0.25.0"
